Improved layout of documentation.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -4,10 +4,11 @@
 # You can set these variables from the command line.
 SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
-SPHINXAPIDOC  = sphinx-apidoc
+SPHINXAPIDOC  = better-apidoc
 SPHINXPROJ    = lhrhost
 SOURCEDIR     = source
 APIDIR        = "$(SOURCEDIR)/api"
+APITEMPLATES  = "$(SOURCEDIR)/_templates"
 BUILDDIR      = build
 
 # Put it first so that "make" without argument is like "make help".
@@ -17,8 +18,9 @@ help:
 .PHONY: help Makefile
 
 # Generate API stubs
+api: export PYTHONPATH := ../
 api:
-	@$(SPHINXAPIDOC) -fMeT -o "$(APIDIR)" "../$(SPHINXPROJ)"
+	@$(SPHINXAPIDOC) -fMeT -t "$(APITEMPLATES)" -o "$(APIDIR)" "../"
 	@echo "Auto-generation of API documentation finished." \
 		"The generated api files are in $(APIDIR)."
 
