Started documentation for mechanical and electrical assembly.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -26,7 +26,7 @@ api:
 
 # Remove auto-generated files
 clean:
-	@rm -rf "$(SPHINXBUILD)"
+	@rm -rf "$(BUILDDIR)"
 	@rm -rf "$(APIDIR)"
 
 # Catch-all target: route all unknown targets to Sphinx using the new
