--- a/lhr-control/library.properties
+++ b/lhr-control/library.properties
@@ -1,5 +1,5 @@
 name=Liquid Handling Robotics
-version=0.0.1
+version=1.0.0
 author=Ethan Li <ethanli@stanford.edu>
 maintainer=Ethan Li <ethanli@stanford.edu>
 sentence=Liquid handling robotics kit low-level control software.
@@ -7,4 +7,4 @@ paragraph=Provides hardware abstraction layers for control of a low-cost liquid-
 category=Device Control
 url=http://liquid-handling-robotics.readthedocs.io/en/latest/index.html
 architectures=*
-includes=Modules.h,ASCIISerialIO.h
+includes=LiquidHandlingRobotics.h,Modules.h
