Unified all test sketches with macros and generalized naming.

--- a/lhr-control/library.properties
+++ b/lhr-control/library.properties
@@ -7,4 +7,4 @@ paragraph=Provides hardware abstraction layers for control of a low-cost liquid-
 category=Device Control
 url=http://liquid-handling-robotics.readthedocs.io/en/latest/index.html
 architectures=*
-includes=LiquidHandlingRobotics.h,Modules.h
+includes=LiquidHandlingRobotics.h,StandardLiquidHandlingRobot.h
