Restructured for compatibility with Arduino Library specifications.

--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.0.0
 author=Ethan Li <ethanli@stanford.edu>
 maintainer=Ethan Li <ethanli@stanford.edu>
 sentence=Liquid handling robotics kit low-level control software.
-paragraph=Provides hardware abstraction layers for control of a low-cost liquid-handling robot.
+paragraph=Provides hardware abstraction layers for control of a low-cost liquid-handling robot, and a messaging protocol stack for high-level control over USB from other devices.
 category=Device Control
 url=http://liquid-handling-robotics.readthedocs.io/en/latest/index.html
 architectures=*
