--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
 name=Liquid Handling Robotics
-version=1.0.0
+version=1.0.1
 author=Ethan Li <ethanli@stanford.edu>
 maintainer=Ethan Li <ethanli@stanford.edu>
-sentence=Liquid handling robotics kit low-level control software.
+sentence=Liquid handling robotics kit: low-level control software.
 paragraph=Provides hardware abstraction layers for control of a low-cost liquid-handling robot, and a messaging protocol stack for high-level control over USB from other devices.
 category=Device Control
 url=http://liquid-handling-robotics.readthedocs.io/en/latest/index.html
